--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=80
 #racine de l'application pour les routes
-#server.servlet.context-path=/dvdstore
+server.servlet.context-path=/easyportfolio
 server.error.include-message=always
 spring.resources.static-location=classpath:/static/
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
